# TRAVEL

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: kitti_params.yaml  kitti_params_ral.yaml  kitti_params_tuning.yaml  params.yaml  rough_terrain_params.yaml  velodyne_16.yaml
devel/: .catkin
devel/include/travel/: node.h
devel/lib/pkgconfig/: travel.pc
devel/lib/python3/dist-packages/travel/msg/: __init__.py  _node.py
devel/share/common-lisp/ros/travel/msg/: _package.lisp  _package_node.lisp  node.lisp  travel-msg.asd
devel/share/gennodejs/ros/travel/msg/: _index.js  node.js
devel/share/roseus/ros/travel/: manifest.l
devel/share/roseus/ros/travel/msg/: node.l
devel/share/travel/cmake/: travel-msg-paths.cmake  travelConfig.cmake
dockerfiles/: base  run.sh
include/travel/: aos.hpp  object_graph_cluster.hpp  tgs.hpp  travelsable_ground_graph_cluster.hpp
include/utils/: kitti_loader.hpp  utils.hpp
launch/: run copy.launch  run_kitti.launch  travel_run.launch
msg/: node.msg
rviz/: acl_jackal2_vel16.rviz  acl_jackal2_vel16_hydra_pipeline.rviz  travel_demo.rviz  travel_kitti.rviz
src/: kitti_publisher.cpp  main.cpp  travel_node.cpp  travel_run.cpp
src/config/: params.yaml
src/dockerfiles/: base
src/launch/: run.launch
